# ai_voice_assistant

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  secrets.h.example  serial_test.c  serial_test.h  test_main.c
main/api/: baidu_api.c  baidu_api.h  ernie_api.c  ernie_api.h  llm_voice.c  llm_voice.h  zhipu_api.c  zhipu_api.h
main/audio/: i2s_audio.c  i2s_audio.h  wakeup.c  wakeup.h
main/tasks/: app_tasks.c  app_tasks.h  voice_assistant.c  voice_assistant.h
main/wifi/: wifi_manager.c  wifi_manager.h
