idf_component_register(
    SRCS
        "main.c"
        "wifi/wifi_manager.c"
        "audio/i2s_audio.c"
        "api/zhipu_api.c"
        "api/baidu_api.c"
        "tasks/voice_assistant.c"
        "serial_test.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_wifi
        esp_event
        nvs_flash
        esp_netif
        esp_http_client
        driver
        json
        mbedtls
)